<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Карта спотов</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_spots">Все споты</string>
    <string name="menu_create_spot">Добавить спот</string>
    <string name="menu_favorite">Избранные</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_nearby">Поблизости</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="fragment_spot_info">Информация о споте</string>

    <string name="title_favorite">Избранные</string>
    <string name="title_spots">Все споты</string>
    <string name="title_profile">Профиль</string>
    <string name="mapkit_api_key" tools:ignore="TypographyDashes">7f04d30b-f7d6-4c8b-b90b-e088d4999767</string>
    <string name="menu_text">Меню</string>
    <!-- Preference Titles -->
    <string name="main_settings">Основные</string>
    <string name="map_settings">Карта</string>

    <!-- Main Preferences -->
    <string name="radius_dialog_title">Введите расстояние в километрах</string>
    <string name="radius_title">Максимальное расстояние до спота, который может считаться спотом поблизости</string>
    <string name="radius_summary">Введите положительное число в км</string>

    <!-- Map Preferences -->
    <string name="night_vision_title">Ночной режим карты</string>
    <string name="night_vision_summary">Если включен, ночной режим уменьшит яркость карты и улучшит контрастность</string>

    <string name="swipe_left_for_register">Проведите пальцем влево для регистрации</string>
    <string name="login_title">Авторизация</string>
    <string name="login_button_text">Войти</string>
    <string name="password">Пароль</string>
    <string name="e_mail">Адрес электронной почты</string>
    <string name="phone_number">Номер телефона</string>
    <string name="birth_date">Дата рождения</string>
    <string name="tag">Присоединяйтесь и настройте\nприложение под себя</string>
    <string name="swipe_right_for_login">Проведите пальцем вправо для авторизации</string>
    <string name="register_title">Регистрация</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="re_type_password">Пароль еще раз</string>
    <string name="your_name">Логин</string>

    <string name="server_url1">185.249.227.104:8080</string>
    <string name="server_url">192.168.1.4:8080</string>
    <string name="default_server_url">192.168.1.4:8080</string>
    <string name="user_image">Фото пользователя</string>
    <string name="iv_name_desc">Иконка имени</string>
    <string name="iv_email_desc">Иконка для email</string>
    <string name="iv_phone_number_desc">Иконка для номера телефона</string>
    <string name="card_name_desc">Логин</string>
    <string name="card_name">Логин отсутствует</string>
    <string name="card_email_desc">Адрес электронной почты</string>
    <string name="card_email">E-mail отсутствует</string>
    <string name="card_phone_number_desc">Номер телефона</string>
    <string name="card_phone_number">Номер телефона отсутствует</string>
    <string name="card_birth_date_desc">Дата рождения</string>
    <string name="card_birth_date">Дата рождения отсутствует</string>
    <string name="card_registration_date_desc">Дата регистрации</string>
    <string name="card_registration_date">Дата регистрации отсутствует</string>
    <string name="btn_sign_out">Выйти из учетной записи</string>
    <string name="spot_name">Название спота отсутствует</string>
    <string name="spot_image_slide">Слайд с картинкой спота</string>
    <string name="spot_description">Описание спота отсутствует</string>
    <string name="space_type">Тип помещения:</string>
    <string name="spot_types">Типы спота:</string>
    <string name="spot_types_names">Типы спота отсутствуют</string>
    <string name="sport_types">Виды спорта:</string>
    <string name="sport_types_names">Виды спорта отсутствуют</string>
    <string name="space_type_name">Тип помещения отсутствует</string>
    <string name="spot_adding_date_desc">Добавлено:</string>
    <string name="spot_adding_date">Дата добавления отсутствует</string>
    <string name="select_spot_position">Отметьте положение спота на карте</string>
    <string name="et_spot_name">Название спота</string>
    <string name="et_spot_description">Описание спота</string>
    <string name="spot_update_date_desc">Обновлено:</string>
    <string name="spot_update_date">Дата обновления отсутствует</string>
    <string name="spot_type_item_text">Тип спота отсутствует</string>
    <string name="no_image_url">https://static.tildacdn.com/stor3066-6134-4434-a132-313064366231/77947111.jpg</string>
    <string name="add_spot_image_content_desc">Добавить картинку для спота</string>
    <string name="open_close_fullscreen_content_desc">Открытие/Скрытие карты на полный экран</string>
    <string name="spot_images">Фотографии спота:</string>
    <string name="add_spot">Добавить спот</string>
    <string name="ib_like_desc">Иконка лайка</string>
    <string name="default_likes_value">0</string>
    <string name="default_favorites_value">0</string>
    <string name="ib_favorite_desc">Иконка избранного</string>
    <string name="commentator_name">Commentator Name</string>
    <string name="actual_comment">Actual Comment</string>
    <string name="comment_date">Comment date</string>

    <string name="fragment_indicator_key">fragment_caller</string>
    <string name="fragment_profile_indicator">profile</string>
    <string name="fragment_favorite_indicator">favorite</string>
    <string name="fragment_create_spot_indicator">create_spot</string>

    <string name="app_version">Версия приложения: 1.0.0</string>
    <string name="app_image_about">App Image</string>
    <string name="about_part_1">\t\t\tНаше приложение - удобный и простой инструмент для любителей экстремальных видов спорта, которые ищут новые места для катания и проведения свободного времени.</string>
    <string name="about_title_part_2">Как работает приложение?</string>
    <string name="about_part_2">\t\t\tМы предоставляем пользователям возможность получать информацию о спотах для катания, а также геолокацию площадок, где можно заниматься конкретными видами экстремальных спортов. Оценки пользователей также помогут в выборе оптимального места для катания.</string>
    <string name="about_title_part_3">Как наше приложение поможет вам?</string>
    <string name="about_part_3">\t\t\tНаше приложение поможет вам сохранить ваше время и находить идеальные места для катания с учетом ваших интересов. Теперь вы сможете наслаждаться экстремальными видами спорта, не тратя много времени на подготовку!</string>
    <string name="about_part_4">\t\t\tМы созданы для того, чтобы помочь вам в поиске идеальных мест для вашего хобби. Подключайтесь и наслаждайтесь жизнью!</string>
    <string name="name_spot_item">Название спота отсутствует</string>
    <string name="list_map_icon">List-Map Icon</string>

    <string name="spot_info_app_bar_title">Информация о споте</string>
    <string name="comments">Комментарии</string>
    <string name="enter_comment">Введите комментарий</string>
    <string name="post_comment_button">Post Comment Button</string>
    <string name="delete_comment_icon">Delete Comment Icon</string>
</resources>