<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_spots"
            android:icon="@drawable/ic_all_spots"
            android:title="@string/menu_all_spots" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_nearby"
            android:title="@string/menu_nearby" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>