<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_spots">

    <fragment
        android:id="@+id/nav_all_spots"
        android:name="com.example.mapofspotsdrawer.ui.all_spots.AllSpotsFragment"
        android:label="@string/menu_all_spots"
        tools:layout="@layout/fragment_all_spots" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.mapofspotsdrawer.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mapofspotsdrawer.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_nearby"
        android:name="com.example.mapofspotsdrawer.ui.nearby.NearbyFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_nearby" />
</navigation>