<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:id="@+id/fragment_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginFragment">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="50sp"
            android:fontFamily="@font/zing_rust"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/login_subtitle"/>

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textSize="17sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:layout_above="@id/et_email"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_above="@id/et_password"
            android:textSize="15sp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:text="@string/login_button_text"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_above="@id/swipeRight"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

    <!-- Прогресс-бар -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>