<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/commentator_image"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/no_image_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/commentator_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commentator_name"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/actual_comment"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/comment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/comment_date" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>