<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileDataFragment" >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_profile_data"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/image_slider_profile_data"
                    android:layout_height="240dp"
                    android:layout_width="match_parent" />

                <me.relex.circleindicator.CircleIndicator3
                    android:id="@+id/indicator_profile_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ci_drawable="@drawable/circle_indicator"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="55dp"/>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    android:nestedScrollingEnabled="true"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_add_user_image"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:src="@drawable/ic_add_image"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="3dp"
                            android:contentDescription="@string/add_spot_image_content_desc" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_delete_user_image"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:src="@drawable/ic_delete_image"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="3dp"
                            android:contentDescription="@string/add_spot_image_content_desc" />

                    </LinearLayout>


                </LinearLayout>

            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_name_desc"
                        android:elevation="10dp"
                        android:src="@drawable/name"
                        app:cardCornerRadius="100dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/card_name_desc"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_name"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_email_desc"
                        android:elevation="10dp"
                        android:src="@drawable/email"
                        app:cardCornerRadius="100dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_email_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/card_email_desc"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_email"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_phone_number_desc"
                        android:elevation="10dp"
                        android:src="@drawable/phone"
                        app:cardCornerRadius="100dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_phone_number_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/card_phone_number_desc"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_phone_number"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_phone_number_desc"
                        android:elevation="10dp"
                        android:src="@drawable/birth_date"
                        app:cardCornerRadius="100dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_birth_date_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/card_birth_date_desc"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_birth_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_birth_date"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_registration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/iv_email_desc"
                        android:elevation="10dp"
                        android:src="@drawable/registration_date"
                        app:cardCornerRadius="100dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_registration_date_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/card_registration_date_desc"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_registration_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_registration_date"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_out"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/btn_sign_out"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:circularflow_defaultRadius="50dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Прогресс-бар -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>